Fix functions and exceptions.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-PRACTICUM_TOKEN=
-TELEGRAM_TOKEN=
-TELEGRAM_CHAT_ID=
+PRACTICUM_TOKEN=y0__eGrRvaHxnofbi7k42jrbyOFZD6yYlVEG24ZvJgJSuO-9c2N
+TELEGRAM_TOKEN=1896711190:AAFmXXXXPEn6KqewJ13kKKtlnBYqVC_XXXX
+TELEGRAM_CHAT_ID=123456789
